Package_Tools/include-C/gtksourceview-5/gtksourceview/in_Arbeit/fertig/gtksource_enumtypes.h


/* This file is generated by glib-mkenums, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses. */

#include <gtksourceview/gtksourceversion.h>


            

/* enumerations from "gtksourcebuffer.h" */


GType gtk_source_bracket_match_type_get_type (void);
#define GTK_SOURCE_TYPE_BRACKET_MATCH_TYPE (gtk_source_bracket_match_type_get_type())


GType gtk_source_change_case_type_get_type (void);
#define GTK_SOURCE_TYPE_CHANGE_CASE_TYPE (gtk_source_change_case_type_get_type())


GType gtk_source_sort_flags_get_type (void);
#define GTK_SOURCE_TYPE_SORT_FLAGS (gtk_source_sort_flags_get_type())

/* enumerations from "gtksourcecompletioncell.h" */


GType gtk_source_completion_column_get_type (void);
#define GTK_SOURCE_TYPE_COMPLETION_COLUMN (gtk_source_completion_column_get_type())

/* enumerations from "gtksourcecompletioncontext.h" */


GType gtk_source_completion_activation_get_type (void);
#define GTK_SOURCE_TYPE_COMPLETION_ACTIVATION (gtk_source_completion_activation_get_type())

/* enumerations from "gtksourcefile.h" */


GType gtk_source_newline_type_get_type (void);
#define GTK_SOURCE_TYPE_NEWLINE_TYPE (gtk_source_newline_type_get_type())


GType gtk_source_compression_type_get_type (void);
#define GTK_SOURCE_TYPE_COMPRESSION_TYPE (gtk_source_compression_type_get_type())

/* enumerations from "gtksourcefileloader.h" */


GType gtk_source_file_loader_error_get_type (void);
#define GTK_SOURCE_TYPE_FILE_LOADER_ERROR (gtk_source_file_loader_error_get_type())

/* enumerations from "gtksourcefilesaver.h" */


GType gtk_source_file_saver_error_get_type (void);
#define GTK_SOURCE_TYPE_FILE_SAVER_ERROR (gtk_source_file_saver_error_get_type())


GType gtk_source_file_saver_flags_get_type (void);
#define GTK_SOURCE_TYPE_FILE_SAVER_FLAGS (gtk_source_file_saver_flags_get_type())

/* enumerations from "gtksourcegutterrenderer.h" */


GType gtk_source_gutter_renderer_alignment_mode_get_type (void);
#define GTK_SOURCE_TYPE_GUTTER_RENDERER_ALIGNMENT_MODE (gtk_source_gutter_renderer_alignment_mode_get_type())

/* enumerations from "gtksourcespacedrawer.h" */


GType gtk_source_space_type_flags_get_type (void);
#define GTK_SOURCE_TYPE_SPACE_TYPE_FLAGS (gtk_source_space_type_flags_get_type())


GType gtk_source_space_location_flags_get_type (void);
#define GTK_SOURCE_TYPE_SPACE_LOCATION_FLAGS (gtk_source_space_location_flags_get_type())

/* enumerations from "gtksourceview.h" */


GType gtk_source_view_gutter_position_get_type (void);
#define GTK_SOURCE_TYPE_VIEW_GUTTER_POSITION (gtk_source_view_gutter_position_get_type())


GType gtk_source_smart_home_end_type_get_type (void);
#define GTK_SOURCE_TYPE_SMART_HOME_END_TYPE (gtk_source_smart_home_end_type_get_type())


GType gtk_source_background_pattern_type_get_type (void);
#define GTK_SOURCE_TYPE_BACKGROUND_PATTERN_TYPE (gtk_source_background_pattern_type_get_type())



/* Generated data ends here */